tests/expectations/compiler/function/program_core_functions.out
Error [ETYC0372005]: Unknown variable `a`
    --> compiler-test:9:19
     |
   9 |         assert_eq(a, b);
     |                   ^
Error [ETYC0372005]: Unknown variable `b`
    --> compiler-test:9:22
     |
   9 |         assert_eq(a, b);
     |                      ^
